// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`<Failure /> > doesnt render code frame if a common error 1`] = `
"
[1m[41m[30m ERROR [39m[49m[22m

 Something is broken!
"
`;

exports[`<Failure /> > doesnt render code frame if arg not found 1`] = `
"
[1m[41m[30m ERROR [39m[49m[22m

 Flags and short option groups may not use inline values.
"
`;

exports[`<Failure /> > reduces command line by half when index appears off screen 1`] = `
"
 ERROR 

 Flags and short option groups may not use inline values.

 … wwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwww" --flag=123 -gSA "mmmmmmmmmmmm …
                                                  └────────┘
"
`;

exports[`<Failure /> > renders a common error 1`] = `
"
[1m[41m[30m ERROR [39m[49m[22m

 Something is broken!
"
`;

exports[`<Failure /> > renders a parse error 1`] = `
"
[1m[41m[30m ERROR [39m[49m[22m

 Flags and short option groups may not use inline values.
"
`;

exports[`<Failure /> > renders a parse error with a command line 1`] = `
"
 ERROR 

 Flags and short option groups may not use inline values.

 $ boost --foo value --flag=123 -gSA
                     └────────┘
"
`;

exports[`<Failure /> > renders a validation error 1`] = `
"
[1m[41m[30m ERROR [39m[49m[22m

 Not enough arity arguments.
"
`;

exports[`<Failure /> > renders a validation error with a command line 1`] = `
"
 ERROR 

 Not enough arity arguments.

 $ boost --foo value --flag=123 -gSA
         └───┘
"
`;
